<resources>
    <string name="app_name">lab8</string>
    <string name="entA">Enter A</string>
    <string name="entB">Enter B</string>
    <string name="entC">Enter C</string>
    <string name="calc">Calculate</string>
    <string name="clear">Clear</string>
    <string name="answ1">Answer 1:</string>
    <string name="answ2">Answer 2:</string>
    <string name="noansw">There is no decision</string>
    <string name="alerttitle">Cleaning</string>
    <string name="alertmsg">Do you want to clean the fields?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Action canceled</string>
    <string name="frgswitch">Switch fragment</string>
    <string name="next_activity">Next activity</string>
    <string name="open_history">History</string>
    <string name="representationtxt">Quadratic equation %1s x^2 + %2s x + %3s result 1: %4s, result 2: %5s"</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="service_started">Service Started</string>
    <string name="service_stopped">Service Stopped</string>
    <string name="open_service_activity">Open service</string>
    <string name="open_browser_activity">Open browser activity</string>
    <string name="enter_link">Enter Link</string>
    <string name="open_browser_link_btn">Open link</string>
    <string name="open_camera_txt">Open Camera</string>
    <string name="show_file_txt">Show File</string>
    <string name="open_file_show_txt">Show File</string>
    <string name="show_db_txt">Show DataBase Content</string>
    <string name="clear_db_txt">Clear DataBase</string>
    <string name="clear_screen_db_txt">Clear Screen</string>
    <string name="open_db_activity_txt">DataBase</string>
    <string name="clear_db_btn">Clear DataBase</string>
    <string name="font_settings">Font Settings</string>
    <string name="font_size_txt">Font Size</string>
    <string name="font_size_summary">Set new font size</string>
    <string name="open_pref_shared_txt">SharedPreferences</string>
    <string name="pref_style_txt">Font Style</string>
    <string name="simple_style">Simple</string>
    <string name="bold_style">Bold</string>
    <string name="italic_style">Italic</string>
    <string name="red_color">Red</string>
    <string name="green_color">Green</string>
    <string name="blue_color">Blue</string>
    <string name="white_color">White</string>
    <string name="color_settings">Color Settings</string>
    <string name="color_set_txt">Color</string>
    <string name="color_set_txt_sum">Choose color for text</string>
    <string name="open_graphic_activity_txt">Graphic Activity</string>
    <string name="scale_txt">Scale</string>
    <string name="rotate_txt">Rotate</string>
    <string name="translate_txt">Translate</string>
    <string name="alpha_txt">Alpha</string>

</resources>