<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.GraphicActivity">

    <ImageView
        android:id="@+id/ImageView_for_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scale_btn"
        android:src="@drawable/foranim"/>
    
    <Button
        android:id="@+id/scale_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImageView_for_anim"/>
    <Button
        android:id="@+id/rotate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scale_btn"/>
    <Button
        android:id="@+id/translate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rotate_btn"/>
    <Button
        android:id="@+id/alpha_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translate_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>