<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.DataBaseActivity">

    <Button
        android:id="@+id/show_db_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_db_txt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clear_db_btn"/>

    <Button
        android:id="@+id/clear_db_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_db_btn"
        app:layout_constraintTop_toBottomOf="@id/show_db_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clear_screen_db_btn" />

    <Button
        android:id="@+id/clear_screen_db_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_screen_db_txt"
        app:layout_constraintTop_toBottomOf="@id/clear_db_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/db_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/clear_screen_db_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>